cydist/cydist_shim.h

void cydist_rice_sample_batch(double b, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_truncated_normal_sample_batch(double a, double b, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_type_2_gumbel_sample_batch(double shape, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_weibull_sample_batch(double shape, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_discrete_weibull_sample_batch(double c, uint64_t seed, double* out, size_t n_samples);
void cydist_wilkss_lambda_sample_batch(double a, double b, uint64_t seed, double* out, size_t n_samples);
void cydist_cauchy_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_exponential_power_sample_batch(double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_fishers_z_sample_batch(double n_, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_kaniadakis_gaussian_sample_batch(double kappa, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_gaussian_q_sample_batch(double q, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_generalized_hyperbolic_sample_batch(double p, double a, double b, uint64_t seed, double* out, size_t n_samples);
void cydist_generalized_logistic_logistic_beta_sample_batch(double c, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_generalized_normal_sample_batch(double beta, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_geometric_stable_sample_batch(double alpha, double beta, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_gumbel_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_holtsmark_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_hyperbolic_secant_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_johnsons_su_sample_batch(double a, double b, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_landau_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_laplace_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_asymmetric_sample_batch(double kappa, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_logistic_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_noncentral_t_sample_batch(double df, double nc, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_normal_sample_batch(double mu, double sigma, uint64_t seed, double* out, size_t n_samples);
void cydist_normal_inverse_gaussian_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_skew_normal_sample_batch(double loc, double scale, double alpha, uint64_t seed, double* out, size_t n_samples);
void cydist_slash_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_stable_sample_batch(double alpha, double beta, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_students_t_sample_batch(double df, uint64_t seed, double* out, size_t n_samples);
void cydist_tracywidom_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_variance_gamma_sample_batch(double a, double b, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_voigt_sample_batch(double sigma, double gamma_width, double loc, uint64_t seed, double* out, size_t n_samples);
void cydist_generalized_chi_squared_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_generalized_extreme_value_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_generalized_pareto_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_marchenkopastur_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_kaniadakis_exponential_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_kaniadakis_gamma_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_kaniadakis_weibull_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_kaniadakis_logistic_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_kaniadakis_erlang_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_q_exponential_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_q_gaussian_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_q_weibull_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_shifted_log_logistic_sample_batch(double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_tukey_lambda_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_rectified_gaussian_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_ewens_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_multinomial_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_dirichlet_multinomial_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_negative_multinomial_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_dirichlet_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_generalized_dirichlet_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_multivariate_laplace_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_multivariate_normal_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_multivariate_stable_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_multivariate_t_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_normal_gamma_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_normal_inverse_gamma_distribution_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_lkj_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_matrix_beta_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_matrix_f_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_matrix_normal_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_matrix_t_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_matrix_gamma_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_inverse_matrix_gamma_distribution_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_wishart_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_normal_wishart_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_inverse_wishart_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_normal_inverse_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_complex_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_uniform_distribution_on_a_stiefel_manifold_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_circular_uniform_sample_batch(double mu, double kappa, uint64_t seed, double* out, size_t n_samples);
void cydist_univariate_von_mises_sample_batch(double mu, double kappa, uint64_t seed, double* out, size_t n_samples);
void cydist_wrapped_normal_sample_batch(double mu, double sigma, uint64_t seed, double* out, size_t n_samples);
void cydist_wrapped_cauchy_sample_batch(double c, double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_wrapped_exponential_sample_batch(double loc, double rate, uint64_t seed, double* out, size_t n_samples);
void cydist_wrapped_asymmetric_laplace_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_wrapped_levy_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_kent_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_bivariate_von_mises_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_von_misesfisher_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_bingham_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);
void cydist_dirac_delta_function_sample_batch(double x0, uint64_t seed, double* out, size_t n_samples);
void cydist_cantor_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples);